# BDfromMacroBI

./: DB_Config.py  Deals.py  Houses.py  Leads.py  Main.py  PostgreSQL.py  main.py  pyproject.toml
MacroBI/: __init__.py
MacroBI/Categories/: Deals.py  Houses.py  Leads.py  __init__.py
macroBI/: configs.py  postgreSQL.py
macroBI/categories/: __init__.py  deals.py  houses.py  leads.py  usefull_functions.py
